*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/resAdv_natures.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/resAdv_natures.htm
@@ -85,9 +85,8 @@ Associating the nature with a project</H3>
 <P >
 Defining the nature is not enough to associate it with a project.&nbsp; You must
 assign a nature to a project by updating the project's description to include
-your nature.&nbsp; This usually happens as the result of some user action, such
-as creating a new project with a specialized new project wizard that assigns the
-nature, or inside a wizard that assigns new capabilities to a project.&nbsp; The following snippet
+your nature.&nbsp; This usually happens when the user creates a new project with a specialized new project wizard that assigns the
+nature.&nbsp; The following snippet
 shows how to assign our new nature to a given project.</P>
 <font color='#4444CC'><pre>
    try {
@@ -110,7 +109,7 @@ to validate the new nature.&nbsp; For example, suppose a nature is defined with
 a prerequisite: </P>
 <pre><font color='#4444CC'>   &lt;extension
       point=&quot;org.eclipse.core.resources.natures&quot;
-      id=&quot;myOtherNature&quot;
+      <b>id=&quot;myOtherNature&quot;</b>
       name=&quot;My Other Nature&quot;&gt;
       &lt;runtime&gt;
          &lt;run class=&quot;com.example.natures.MyOtherNature&quot;&gt;
