--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_devprocess.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_devprocess.htm
@@ -37,6 +37,10 @@ project.&nbsp;     A family of VM's (such as the JDK) is represented by the
  IVMRunner</b></a>
   is used to start a particular Java VM and register its processes with the 
 debug plug-in.</li>
+    <li><a href="../reference/api/org/eclipse/jdt/debug/core/package-summary.html"><b>
+ org.eclipse.jdt.debug</b></a>
+      supports a Java debug model based on JDI/JDWP that can be used for controlling a
+      Java program under debug.</li>
    <li><b><a href="../reference/api/org/eclipse/jdt/core/dom/package-summary.html">
   org.eclipse.jdt.core.dom</a>
      </b> supports Abstract Syntax Trees (AST) that can be used for exaiming
