*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_structure.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_structure.htm
@@ -30,9 +30,10 @@ For the rest of this discussion, when we use the term workbench, we will be refe
 tool bar, status line, short cut bar, and pages. In general, you don't need to program to the workbench window. You just want to know that it's there.</P>
 <i><blockquote>
 Note:&nbsp; You can open multiple workbench windows using
-<b> Perspective-&gt;Open. </b>By default, new perspectives are opened in the
-same workbench window.&nbsp; Other options are available (see the workbench
-preference page for details).&nbsp; Each workbench window is a self-contained world of editors and views,
+<b> Perspective-&gt;Open </b>if you have set up your workbench preferences to
+open perspectives in a new window.
+<b> </b>By default, new perspectives are opened in the
+same workbench window.&nbsp; Each workbench window is a self-contained world of editors and views,
 so we'll just focus on a single workbench
 window.</blockquote></i>
 <P >
@@ -43,9 +44,7 @@ From the user's point of view, a workbench contains views and editors. There are
 <H3>
 Page</H3>
 <P >
-Inside the workbench window, you'll find one or more pages (<b><a href="../reference/api/org/eclipse/ui/IWorkbenchPage.html">IWorkbenchPage</a></b>) that in turn contain parts. Pages are an implementation mechanism for grouping parts. You typically don't need to program to the page, but you'll see it in the context of programming and debugging. </P>
-<i><blockquote>
-Note:&nbsp; Pages are used in the implementation of Perspectives. They allow workbench parts to be placed in an outer container without concern for whether the perspective is opened in the same workbench window or a new workbench window.</blockquote></i>
+Inside the workbench window, you'll find one page (<b><a href="../reference/api/org/eclipse/ui/IWorkbenchPage.html">IWorkbenchPage</a></b>) that in turn contains parts. Pages are an implementation mechanism for grouping parts. You typically don't need to program to the page, but you'll see it in the context of programming and debugging. </P>
 
 
 <H3>
