--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
@@ -76,7 +76,7 @@ src="..\images\ngrelr.gif" alt="Related reference"></p>
 <a href="..\reference\ref-45.htm">Console view</a><br>
 <a href="..\reference\ref-51.htm">Debug view</a><br>
 <a href="..\reference\ref-52.htm">Display view</a><br>
-<a href="..\reference\ref-56.htm">Inspector view</a><br>
+<a href="..\reference\ref-56.htm">Expressions view</a><br>
 <a href="..\reference\ref-102.htm">Outline view for Java</a><br>
 <a href="..\reference\ref-90.htm">Packages view</a><br>
 <a href="..\reference\ref-66.htm">Processes view</a><br>
