--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
@@ -63,19 +63,17 @@ includes the following views.</p>
 
 <ul style='margin-top:0in' type=disc>
  <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo2;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Processes<o:p></o:p></span></li>
- <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo2;tab-stops:list .5in'><span
      style='font-size:10.0pt;font-family:Arial'>Debug<o:p></o:p></span></li>
  <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo2;tab-stops:list .5in'><span
      style='font-size:10.0pt;font-family:Arial'>Breakpoints<o:p></o:p></span></li>
  <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo2;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Inspector<o:p></o:p></span></li>
+     style='font-size:10.0pt;font-family:Arial'>Expressions<o:p></o:p></span></li>
  <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo2;tab-stops:list .5in'><span
      style='font-size:10.0pt;font-family:Arial'>Variables<o:p></o:p></span></li>
  <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo2;tab-stops:list .5in'><span
      style='font-size:10.0pt;font-family:Arial'>Display<o:p></o:p></span></li>
- <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo2;tab-stops:list .5in'><span
-     style='font-size:10.0pt;font-family:Arial'>Outline<o:p></o:p></span></li>
+ <li class=MsoNormal style='color:black;mso-list:l1 level1 lfo1;tab-stops:list .5in'><span
+     style='font-size:10.0pt;font-family:Arial'>Outline<o:p></o:p></span></li>     
  <li class=MsoNormal style='color:black;mso-list:l0 level1 lfo2;tab-stops:list .5in'><span
      style='font-size:10.0pt;font-family:Arial'>Console<o:p></o:p></span></li>
 </ul>
@@ -100,7 +98,7 @@ src="..\images\ngrelr.gif" alt="Related reference"></p>
 <a href="..\reference\ref-45.htm">Console view</a><br>
 <a href="..\reference\ref-51.htm">Debug view</a><br>
 <a href="..\reference\ref-52.htm">Display view</a><br>
-<a href="..\reference\ref-56.htm">Inspector view</a><br>
+<a href="..\reference\ref-56.htm">Expressions view</a><br>
 <a href="..\reference\ref-102.htm">Outline view for Java</a><br>
 <a href="..\reference\ref-90.htm">Packages view</a><br>
 <a href="..\reference\ref-66.htm">Processes view</a><br>
