Quick start 2 - verify detected JRE

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
@@ -46,31 +46,20 @@ In the main workbench window, select Window &gt; Preferences &gt; Java &gt; Inst
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-Make sure that the Standard VM located in the <SPAN CLASS="Filename">
-&lt;workbenchRoot&gt;\JRE</SPAN>
- directory has been detected. </P>
+Ensure that a JRE has been detected. By defualt, the JRE used to run the Eclipse IDE
+will be used to build and run Java programs. It should appear with a check mark in the
+list of installed JREs.</P>
+<DIV CLASS="Snapshot">
+<DIV>
+<IMG SRC="../images/qs-1.gif">
+</DIV>
+</DIV>
 </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
 <P CLASS="Para">
 <b>3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-The three variables on this page are preset depending on which JRE has been chosen as the default. </P>
-<DIV CLASS="Snapshot">
-<DIV>
-<IMG SRC="../images/qs-1.gif" width="421" height="88">
-</DIV>
-</DIV>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>4.</b>
 </P>
 </TD>
 <TD valign="top" align="left">
@@ -92,7 +81,7 @@ Perform build automatically on resource modification</SPAN>
 <TR>
 <TD valign="top" align="left">
 <P CLASS="Para">
-<b>5.</b>
+<b>4.</b>
 </P>
 </TD>
 <TD valign="top" align="left">
@@ -114,7 +103,7 @@ Use 'src' and 'bin' folders as defaults for new projects</SPAN>
 <TR>
 <TD valign="top" align="left">
 <P CLASS="Para">
-<b>6.</b>
+<b>5.</b>
 </P>
 </TD>
 <TD valign="top" align="left">
