--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07c.htm
@@ -39,7 +39,8 @@ the view's popup menu choose New &gt; Folder.</P>
 <TD valign="top" align="left">
 <P CLASS="Para">
 In the New Folder wizard, your project name appears by default in the <i>Enter or select the folder
-field</i>. This is because we chose to create the new folder from your project's context menu.</P>
+</i>
+field. This is because we chose to create the new folder from your project's context menu.</P>
 </TD>
 </TR>
 <TR>
