--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07d.htm
@@ -221,7 +221,7 @@ closely you can also see a second, inactive editor tab, &quot;Welcome&quot;.&nbs
 click on the editor tab for JanesFile.txt. Notice how the Navigator updated
 itself to select the file you are currently editing (JanesFile.txt). If you
 don't like this automatic update you can easily turn it off using Window &gt;
-Preferences &gt; Workbench.
+Preferences &gt; Workbench &gt; Link Navigator selection to active editor.
 </P>
 
 
