--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12b.htm
@@ -56,7 +56,7 @@ road.</p>
 </TABLE>
 <P CLASS="Para">
 You can configure the default editors using&nbsp; Window &gt; Preferences &gt;
-Workbench &gt; File Editors.</P>
+Workbench &gt; File Associations.</P>
 
 
 <P CLASS="Para">
