--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24b.htm
@@ -9,49 +9,62 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h3>
-Drag and drop</h3>
+Drag and drop or copy and paste</h3>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/win_only.gif" width="51" height="13">
 You can use your operating system's file system explorer to export a copy of a
 folder or file from the workbench to the file system.</P>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
+<TABLE BORDER="0" cellspacing="0" cellpadding="3" height="139">
 <THEAD>
 </THEAD>
 <TBODY>
 <TR>
-<TD valign="top" align="left">
+<TD valign="top" align="left" height="38">
 <P CLASS="Para">
 <b>
 1.</b>
 </P>
 </TD>
-<TD valign="top" align="left">
+<TD valign="top" align="left" height="38">
 <P CLASS="Para">
 Open your operating system's file system explorer.</P>
 </TD>
 </TR>
 <TR>
-<TD valign="top" align="left">
+<TD valign="top" align="left" height="38">
 <P CLASS="Para">
 <b>
 2.</b>
 </P>
 </TD>
-<TD valign="top" align="left">
+<TD valign="top" align="left" height="38">
 <P CLASS="Para">
 Drag the file JanesFile.txt from the Navigator to the file system explorer.</P>
 </TD>
 </TR>
 <TR>
-<TD valign="top" align="left">
+<TD valign="top" align="left" height="45">
 <P CLASS="Para">
 <b>
 3.</b>
 </P>
 </TD>
-<TD valign="top" align="left">
+<TD valign="top" align="left" height="45">
 <P CLASS="Para">
 Notice that the file is copied to the destination in the file system.</P>
+</TD>
+</TR>
+<TR>
+<TD valign="top" align="left" height="45">
+<p CLASS="Para">
+<b>4.</b>
+</p>
+</TD>
+<TD valign="top" align="left" height="45">
+<p CLASS="Para">
+The export can also be achieved by selecting the file in the Navigator and
+choosing Edit &gt; Copy, then
+<p CLASS="Para">pasting it in the file system explorer.
 </TD>
 </TR>
 </TBODY>
