--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24c.htm
@@ -97,7 +97,7 @@ In the Options area, you can choose to:			 </P>
 <LI CLASS="Item">
 Overwrite existing resources without warning </LI>
 <LI CLASS="Item">
-Create directory structure for files</LI>
+Create directory structure for files or Create only selected directories</LI>
 </UL>
 </TD>
 </TR>
