--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31b.htm
@@ -9,7 +9,7 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h3>
-Drag and drop</h3>
+Drag and drop or copy and paste</h3>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/win_only.gif" width="51" height="13"> You can use your operating system's file system
 browser to copy folders and files from the file system into the workbench.</P>
@@ -44,8 +44,7 @@ Open your operating system's file system explorer.</P>
 <TD valign="top" align="left">
 <P CLASS="Para">
 Locate the file JanesFile.txt that we recently exported and drag it to a specific location in the Navigator view in the workbench.&nbsp;&nbsp;</P>
-<P CLASS="Para">When dragging resources into the Navigator you will either see a
-horizontal line (as shown below) or the project/folder that you are trying to
+<P CLASS="Para">When dragging resources into the Navigator, the project/folder that you are trying to
 drop the resource into will be selected.</P>
 <blockquote>
   <blockquote>
@@ -67,6 +66,16 @@ Drag the file over JaneQUser2 and release the mouse button.</P>
 <TD valign="top" align="left">
 <P CLASS="Para">
 Notice that the file is copied into the workbench and placed into JaneQUser2.</P>
+</TD>
+</TR>
+<TR>
+<TD valign="top" align="left">
+<b>4.</b>
+</TD>
+<TD valign="top" align="left">
+This can also be achieved by copying the file in the system's file explorer,
+then selecting the destination in the Navigator and&nbsp;
+<p>choosing Edit &gt; Paste.
 </TD>
 </TR>
 </TBODY>
