--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31c.htm
@@ -125,7 +125,7 @@ In the Options area, you can choose to:			 </P>
 <LI CLASS="Item">
 Overwrite existing resources without warning </LI>
 <LI CLASS="Item">
-Create complete container structure.</LI>
+Create complete folder structure or Create selected folders only</LI>
 </UL>
 </TD>
 </TR>
