--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-32.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-32.htm
@@ -58,7 +58,20 @@ To delete the project do one of the following:</P>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-When asked to confirm the deletion, click OK.</P>
+You&nbsp; will be asked to confirm the deletion and also choose the type of
+deletion you want to perform.</P>
+<P CLASS="Para">
+You can:</P>
+<ul>
+  <li>
+    <p CLASS="Para">Also delete the contents of the project from the file system</p>
+  </li>
+  <li>
+    <p CLASS="Para">Delete the project from the workspace but don't delete its
+    constants in the file system</p>
+  </li>
+</ul>
+<p CLASS="Para">Just accept the default (Do not delete contents) and press Yes.</p>
 </TD>
 </TR>
 </TBODY>
