--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34c.htm
@@ -60,7 +60,7 @@ There should also be an editor tab for JanesWordDoc.doc.&nbsp;</P>
 Make a change to the file.</P>
 </TD>
 </TR>
-<TR>
+<tr>
 <TD valign="top" align="left">
 <P CLASS="Para">
 <b>5.</b>
@@ -68,19 +68,17 @@ Make a change to the file.</P>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-Save the file.</P>
+Close the editor by clicking the X on the editor tab; when prompted, save its
+contents.</P>
 </TD>
-</TR>
+</tr>
 <TR>
 <TD valign="top" align="left">
-<P CLASS="Para">
-<b>6.</b>
-</P>
+<p CLASS="Para"><b>6.</b>
 </TD>
 <TD valign="top" align="left">
-<P CLASS="Para">
-Close the editor by clicking the X on the editor tab; then, reopen the file by
-double-clicking it in the Navigator view.</P>
+<p CLASS="Para">Reopen the file by
+double-clicking it in the Navigator view.
 </TD>
 </TR>
 </TBODY>
