--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12.htm
@@ -13,7 +13,7 @@ Navigating resources </h2>
 <P CLASS="Para">
 In this section we will work with the Navigator and Tasks views.&nbsp; These
 views are initially part of the resource perspective. If you want to experiment
-with other views, you can show them by using the Perspective &gt; Show View
+with other views, you can show them by using the Window &gt; Show View
 menu.</P>
 <P CLASS="Para">
 One important view to become familiar with is the Navigator view, which displays information about the contents of the workbench and how the resources all relate to one another in a hierarchy.</P>
