--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24a.htm
@@ -14,7 +14,12 @@ Exporting files </h2>
 &nbsp;You can export files from the workbench either by:</P>
 <ul>
   <li>
-    <img align="texttop" border="0" src="../images/win_only.gif" width="51" height="13">dragging and dropping to the file system
+    <img align="texttop" border="0" src="../images/win_only.gif" width="51" height="13">dragging and dropping
+    to the file system
+    or</li>
+  <li>
+    <img align="texttop" border="0" src="../images/win_only.gif" width="51" height="13">copying
+    and pasting to the file system
     or</li>
   <li>
     using the export wizard.</li>
