--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31a.htm
@@ -16,6 +16,9 @@ You can import files into the workbench either by :</P>
   <li>
     <img align="texttop" border="0" src="../images/win_only.gif" width="51" height="13"> dragging and dropping from the file system or</li>
   <li>
+    <img align="texttop" border="0" src="../images/win_only.gif" width="51" height="13">
+    copy and pasting from the file system or</li>
+  <li>
      using the import wizard.&nbsp;</li>
 </ul>
 <p CLASS="Para">
