--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_perspectives.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_perspectives.htm
@@ -14,14 +14,15 @@
 org.eclipse.ui.perspectives</H3>
 <P >
 We've already seen some ways the workbench allows the user to control the appearance of plug-in functionality. Views can be hidden or shown using the
-<b> Perspective-&gt;Show View</b> menu. Action sets can be hidden or shown using the
-<b> Perspective-&gt;Customize...</b> menu. These features help the user organize the clutter in the workbench at a fine grained level. </P>
+<b>Window-&gt;Show View</b> menu. Action sets can be hidden or shown using the <b>Window-&gt;Customize
+Perspective...</b> menu. These features help the user organize the clutter in the workbench at a fine grained level. </P>
 
 <H4>
 Perspectives</H4>
 <P >
 <b>
-Perspectives</b> provide an additional layer of organization. Users can switch between perspectives as they move across tasks. A perspective defines an initial collection and layout of views that should be used when the user first switches to it. It also defines the initial visible action sets.</P>
+Perspectives</b> provide an additional layer of organization inside a workbench
+window. Users can switch between perspectives as they move across tasks. A perspective defines an initial collection and layout of views that should be used when the user first switches to it. It also defines the initial visible action sets.</P>
 <P >
 The platform itself defines one perspective, the <b> Resource</b> perspective. Other platform plug-ins, such as
 the help system and the Java tooling, define additional perspectives. Your plug-in can define its own
@@ -62,10 +63,10 @@ solve a similar problem (sizing and positioning widgets within a larger area), y
 perspective page layout.</P>
 <P >
 A perspective page layout is initialized with one area for displaying an editor. The perspective factory is responsible for adding additional views relative to the
-editor. Views are added to the layout in relationship (top, bottom, left, right) to another part. Placeholders (empty space) can also be added for a view that is not initially shown.</P>
+editor. Views are added to the layout in relationship (top, bottom, left, right) to another part. Placeholders (empty space) can also be added for a
+simple view or folder that is not initially shown.</P>
 <P >
-<a href="../reference/api/org/eclipse/ui/IFolderLayout.html"><b>
-IFolderLayout</b></a> can be used to group views into tabbed folders. For example, the Resource perspective
+To organize related views and reduce clutter, you can use <a href="../reference/api/org/eclipse/ui/IFolderLayout.html"><b>IFolderLayout</b></a> to group views into tabbed folders. For example, the Resource perspective
 places the resource navigator inside a folder at the top left corner of the
 workbench.&nbsp; Placeholders are commonly used with folder layouts.
 The Resource perspective defines a placeholder for the bookmarks view in the
@@ -73,14 +74,22 @@ same folder as the resource navigator. If the user shows the bookmarks view, it 
 navigator, with a tab for each view.</P>
 <P >
  <b><a href="../reference/api/org/eclipse/ui/IPageLayout.html"> IPageLayout</a></b>
-also allows you to add action sets to a perspective.&nbsp; You can also add a
- number of shortcuts to perspective related menus.&nbsp; A new wizard shortcut
- will add a new entry to the <b>File-&gt;New</b> menu for a perspective and
- invoke the appropriate wizard.&nbsp;&nbsp; View shortcuts add the names of
- views that should appear in the <b>Perspective-&gt;Show View</b>  menu when the
- perspective is active.&nbsp; Perspective shortcuts add the names of
- perspectives that should appear in the <b>Perspective-&gt;Open</b> menu when
- the perspective is active. </P>
+also allows you to define available actions and shortcuts inside a
+perspective.&nbsp;&nbsp; </P>
+
+
+
+<ul>
+  <li><b>addActionSet</b> is used to add action sets to a perspective.&nbsp;&nbsp;</li>
+  <li><b>addNewWizardShortcut</b> adds a new entry to the <b>File-&gt;New</b> menu for a perspective and
+ invoke the appropriate wizard.&nbsp;&nbsp;&nbsp;</li>
+  <li><b>addShowViewShortcut</b> adds the names of
+ views that should appear in the <b>Window-&gt;Show View</b>  menu when the
+ perspective is active.&nbsp;&nbsp;</li>
+  <li><b>addPerspectiveShortcut</b> adds the names of
+ perspectives that should appear in the <b>Window-&gt;Open Perspective</b> menu when
+ the perspective is active.</li>
+</ul>
 
 
 
