--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34d.htm
@@ -64,7 +64,7 @@ Return to the workbench and in the Navigator view, select the project JaneQUser.
 <b>5.</b>
 </TD>
 <TD valign="top" align="left">
-Choose Refresh from Local from the project's context menu. This instructs the
+Choose Refresh from the project's context menu. This instructs the
 workbench to look for any changes to the project that have been made in the
 local file system by external tools.
 </TD>
@@ -85,7 +85,7 @@ Select the file JanesINIFile.ini .</P>
 <b>7.</b>
 </TD>
 <TD valign="top" align="left">
-For a little variety choose Open With &gt; Default Text Editor from the file's
+For a little variety choose Open With &gt; Text Editor from the file's
 popup menu.
 </TD>
 </TR>
@@ -96,7 +96,7 @@ popup menu.
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-Observe that the workbench's own default editor is opened.&nbsp;</P>
+Observe that the workbench's own default text editor is opened.&nbsp;</P>
 <P CLASS="Para">
 In the default text editor verify the changes you made externally are reflected in the
 workbench.</P>
@@ -107,8 +107,7 @@ workbench.</P>
 <P>As we've seen the workbench stores all of its resources in the local file
 system. This means you can use your system file explorer to copy files from the
 workbench's workspace area even when the workbench is not running. You can also
-copy resources into the workspace directory. You should use Refresh from
-Local to update the workbench with any changes you have made outside the
+copy resources into the workspace directory. You should use Refresh to update the workbench with any changes you have made outside the
 workbench.&nbsp; &nbsp;
 </P>
 
