--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35b.htm
@@ -31,10 +31,11 @@ introduction to this <a href="qs-35.htm#setup">section</a>.&nbsp;</P>
 </TR>
 <TR>
 <TD valign="top" align="left">
-<b>2.</b>
+<p CLASS="Para"><b>2.</b></p>
 </TD>
 <TD valign="top" align="left">
-In the Navigator view, select JanesFile.txt
+<p CLASS="Para">
+In the Navigator view, select JanesFile.txt</p>
 </TD>
 </TR>
 <TR>
@@ -55,34 +56,21 @@ From the file's context menu, select Copy (or Ctrl+C)</P>
 </P>
 </TD>
 <TD valign="top" align="left">
-<P CLASS="Para">
-In the Folder Selection dialog, select JanesOtherFolder as the destination.</P>
-<DIV CLASS="Note">
-<P CLASS="Para">
-Note:	If you select the same folder as the original, the copy will be renamed so that it will not conflict with the original file.</P>
-<blockquote>
-  <P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image46_copy_dialog.jpg" width="230" height="289"></P>
-</blockquote>
-</DIV>
+<P>
+In the Navigator view, select JanesOtherFolder as the destination.</P>
 </TD>
 </TR>
-<TR>
+<tr>
 <TD valign="top" align="left">
 <P CLASS="Para">
 <b>5.</b>
 </P>
 </TD>
 <TD valign="top" align="left">
-<P CLASS="Para">
-In the Navigator view expand JanesOtherFolder and confirm that you now have a
-second copy of JanesFile.txt.</P>
-<blockquote>
-<P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image47_copy_done.jpg" width="180" height="213"></P>
-</blockquote>
+<P>
+From the folder's context menu, select Paste (or Ctrl+V)</P>
 </TD>
-</TR>
+</tr>
 </TBODY>
 </TABLE>
 <P>&nbsp;We have seen how to copy files using the copy operation. It is also
