--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35c.htm
@@ -81,10 +81,11 @@ In the Navigator view, select the folder JanesOtherFolder</P>
 </TR>
 <TR>
 <TD valign="top" align="left">
-<b>2.</b>
+<p CLASS="Para"><b>2.</b></p>
 </TD>
 <TD valign="top" align="left">
-From the folder's context menu choose Rename.
+<p CLASS="Para">
+From the folder's context menu choose Rename.</p>
 </TD>
 </TR>
 <TR>
