*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/firstplugin_install.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/firstplugin_install.htm
@@ -30,7 +30,7 @@ qualified id, including the dots.&nbsp; In this case, we need to create a direct
 and restart it.&nbsp; Why?&nbsp; When the platform starts, it assembles a list of all of the plug-ins installed in the system, called the plug-in registry. This registry keeps track of plug-ins and the extension points that they contribute.&nbsp;
 Restarting the workbench will cause it to find your new plug-in.</P>
 <P >Now what?&nbsp; How do we run the plug-in?&nbsp; We can see all of the views
-that have been contributed by plug-ins using the <b>Perspective-&gt;Show
+that have been contributed by plug-ins using the <b>Window-&gt;Show
 View</b> menu.</P>
 
 <img border="0" src="images/perspectivemenu.jpg" width="367" height="261">
