--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-1.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-1.htm
@@ -1,51 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Customizing the layout of the workbench</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Customizing the layout of the workbench</H1>
-<P>&nbsp;In a perspective, views and editors can be rearranged to customize and
-improve the appearance and layout of the workbench for your individual needs.
-</P>
-
-
-<P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/concepts-5.htm"><br>
-Views<br>
-</a><a href="../concepts/concepts-21.htm">Fast views</a><br>
-<a href="../concepts/concepts-4.htm">Perspectives</a>
-</P>
-
-
-<P><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-3.htm"><br>
-Opening views</a><a href="tasks-3b.htm"><br>
-Creating floating views</a><a href="tasks-3e.htm"><br>
-Moving and docking views</a><a href="tasks-3h.htm"><br>
-Rearranging tabbed views</a>&nbsp;<a href="tasks-3i.htm"><br>
-Maximizing a view or editor</a>&nbsp;<a href="Creating%20fast%20views"><br>
-<a href="tasks-9b.htm">Creating fast views</a></a><br>
-<a href="tasks-3g.htm">Tiling editors</a>&nbsp;<a href="tasks-9.htm"><br>
-Changing
-      the placement of editor tabs</a><a href="tasks-31.htm"><br>
-Specifying the default perspective</a>&nbsp;<a href="tasks-24.htm"><br>
-Changing
-      where perspectives open</a>&nbsp;<a href="tasks-9k.htm"><br>
-Configuring perspectives</a><a href="tasks-9i.htm"><br>
-Saving
-      a user-defined perspective</a>&nbsp;<br>
-<a href="tasks-9j.htm">Resetting perspectives</a>
-</P>
-
-
-<P>
-<img align="texttop" src = ../images/ngibmcpy.gif alt="Copyright IBM Corp. 2000, 2001" width="195" height="12">
-</P>
-
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Customizing the layout of the workbench</title></HEAD><BODY BGCOLOR="#ffffff"><H1 CLASS="Head">Customizing the layout of the workbench</H1><P>&nbsp;In a perspective, views and editors can be rearranged to customize andimprove the appearance and layout of the workbench for your individual needs.</P><P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/concepts-5.htm"><br>Views<br></a><a href="../concepts/concepts-21.htm">Fast views</a><br><a href="../concepts/concepts-4.htm">Perspectives</a></P><P><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-3.htm">Opening views</a><br><a href="tasks-3b.htm">Creating floating views</a><br><a href="tasks-3e.htm">Moving and docking views</a><br><a href="tasks-3h.htm">Rearranging tabbed views</a><br><a href="tasks-3i.htm">Maximizing a view or editor</a><br><a href="tasks-9b.htm">Creating fast views</a><br><a href="tasks-3g.htm">Tiling editors</a><br><a href="tasks-9.htm">Changing the placement of editor tabs</a><br><a href="tasks-31.htm">Specifying the default perspective</a><br><a href="tasks-24.htm">Changing where perspectives open</a><br><a href="tasks-9k.htm">Configuring perspectives</a><br><a href="tasks-9i.htm">Saving a user-defined perspective</a><br><a href="tasks-9j.htm">Resetting perspectives</a></P><p>&nbsp;<br><img align="texttop" src = ../images/ngibmcpy2002.gif alt="Copyright IBM Corp. 2000, 2002" width="195" height="12"></p></BODY></HTML>
