--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-43.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-43.htm
@@ -1,41 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Creating a folder</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Creating a folder</H1>
-<P CLASS="Para">
-To create a new folder:</P>
-<ol>
-  <li>
-    <p CLASS="Para">In the Navigator view, right-click the project or folder
-    where you want to create the new folder.</li>
-  <li>
-    <p CLASS="Para">From the pop-up menu, select <b>New &gt; Folder</b>.</li>
-  <li>
-    <p CLASS="Para">Enter the name of the new folder and click <b>Finish</b>.</li>
-</ol>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/cnav.htm"><br>
-</a><a href="..concepts/concepts-12.htm">Resources<br>
-Resource
-hierarchies</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="tasks-42.htm">
-Creating a project</a><a href="tasks-44.htm"><br>
-Creating a file</a><a href="tasks-46ag.htm"><br>
-</a><a href="tasks-63cg.htm">Copying
-resources</a><a href="tasks-63.htm"><br>
-Moving resources</a></p>
-<P>
-<img align="texttop" src = ../images/ngibmcpy.gif alt="Copyright IBM Corp. 2000, 2001" width="195" height="12">
-</P>
-
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Creating a folder</title></HEAD><BODY BGCOLOR="#ffffff"><H1 CLASS="Head">Creating a folder</H1><P CLASS="Para">To create a new folder:</P><ol>  <li>    <p CLASS="Para">In the Navigator view, right-click the project or folder    where you want to create the new folder.</li>  <li>    <p CLASS="Para">From the pop-up menu, select <b>New &gt; Folder</b>.</li>  <li>    <p CLASS="Para">Enter the name of the new folder and click <b>Finish</b>.</li></ol><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/cnav.htm">Resources</a><br><a href="../concepts/concepts-12.htm">Resource hierarchies</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-42.htm">Creating a project</a><br><a href="tasks-44.htm">Creating a file</a><br><a href="tasks-63cg.htm">Copying resources</a><br><a href="tasks-63.htm">Moving resources</a></p><p>&nbsp;<br><img align="texttop" src = ../images/ngibmcpy2002.gif alt="Copyright IBM Corp. 2000, 2002" width="195" height="12"></p></BODY></HTML>
