--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-9k.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-9k.htm
@@ -1,48 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Configuring perspectives</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">Configuring perspectives</H1>
-<p CLASS="Para">In addition to configuring the layout of your perspective you
-can also control several other key aspects of a perspective. These include:</p>
-<ul>
-  <li>
-    <p CLASS="Para">The <b> New</b> menu</li>
-  <li>
-    <p CLASS="Para">The <b> Perspective &gt; Open</b> menu</li>
-  <li>
-    <p CLASS="Para">The <b> Perspective &gt; Show View</b> menu</li>
-  <li>
-    <p CLASS="Para">Action sets that show up on the toolbar and menu bar</li>
-</ul>
-<p CLASS="Para">To reconfigure a perspective:</p>
-<ol>
-  <li>
-    <p CLASS="Para">Switch&nbsp; to the perspective that you want to configure.</li>
-  <li>
-    <p CLASS="Para">Select <b>Perspective &gt; Customize</b>.</li>
-  <li>
-    <p CLASS="Para">Expand the item that you want to customize.</li>
-  <li>
-    <p CLASS="Para">Use the check boxes to select which elements you want to see
-    on drop-down menus in the selected perspective and click <b>OK</b>.</li>
-</ol>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." width="159" height="27"><br>
-<a href="../concepts/concepts-4.htm">Perspectives</a></p>
-<P CLASS="Para" Label=Type><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-9f.htm"><br>
-</a><a href="tasks-24.htm">Changing where perspectives open<br>
-</a><a href="tasks-31.htm">Specifying the default perspective</a><br>
-<a href="tasks-9i.htm">Saving a user-defined perspective</a></p>
-<P><br>
-<img align="texttop" src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
-</P>
-
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Configuring perspectives</title></HEAD><BODY BGCOLOR="#ffffff"><H1 CLASS="Head">Configuring perspectives</H1><p CLASS="Para">In addition to configuring the layout of your perspective youcan also control several other key aspects of a perspective. These include:</p><ul>  <li>    <p CLASS="Para">The <b>File &gt; New</b> menu</li>  <li>    <p CLASS="Para">The <b> Window &gt; Open Perspective</b> menu</li>  <li>    <p CLASS="Para">The <b> Window &gt; Show View</b> menu</li>  <li>    <p CLASS="Para">Action sets that show up on the toolbar and menu bar</li></ul><p CLASS="Para">To reconfigure a perspective:</p><ol>  <li>    <p CLASS="Para">Switch&nbsp; to the perspective that you want to configure.</li>  <li>    <p CLASS="Para">Select <b>Window &gt; Customize Perspective</b>.</li>  <li>    <p CLASS="Para">Expand the item that you want to customize.</li>  <li>    <p CLASS="Para">Use the check boxes to select which elements you want to see    on drop-down menus in the selected perspective and click <b>OK</b>.</li></ol><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." width="159" height="27"><br><a href="../concepts/concepts-4.htm">Perspectives</a></p><P CLASS="Para" Label=Type><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-9f.htm"><br></a><a href="tasks-24.htm">Changing where perspectives open<br></a><a href="tasks-31.htm">Specifying the default perspective</a><br><a href="tasks-9i.htm">Saving a user-defined perspective</a></p><P><br><img align="texttop" src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. 2000,2002" width="195" height="12"></P></BODY></HTML>
