--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-28.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-28.htm
@@ -1,28 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Switching between perspectives</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Switching between perspectives</H1>
-<P CLASS="Para">
-Open perspectives are all represented by icons on the shortcut bar (the toolbar
-at the left of the workbench window). When you have more than one perspective
-open, you can switch between them by clicking the icons on the shortcut bar.</P>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." width="159" height="27"><br>
-<a href="../concepts/concepts-4.htm">Perspectives</a></p>
-<P CLASS="Para" Label=Type><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-9f.htm"><br>
-Opening perspectives</a><a href="tasks-24.htm"><br>
-</a><a href="tasks-9h.htm">Replacing perspectives</a></p>
-<P>&nbsp;<br>
-<img align="texttop" src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
-</P>
-
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Switching between perspectives</title></HEAD><BODY BGCOLOR="#ffffff"><H1 CLASS="Head">Switching between perspectives</H1><P CLASS="Para">Open perspectives are all represented by icons on the shortcut bar (the toolbarat the left of the workbench window). When you have more than one perspectiveopen, you can switch between them by clicking the icons on the shortcut bar.</P><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." width="159" height="27"><br><a href="../concepts/concepts-4.htm">Perspectives</a></p><P CLASS="Para" Label=Type><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-9f.htm">Opening perspectives</a><br><a href="tasks-24.htm">Changing where perspectives open</a><p>&nbsp;<br><img align="texttop" src = ../images/ngibmcpy2002.gif alt="Copyright IBM Corp. 2000, 2002" width="195" height="12"></p></BODY></HTML>
