*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_views.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_views.htm
@@ -57,8 +57,7 @@ and
 for the view, using a path relative to the plug-in's installation directory. </P>
 <P >
 Let's look at the <b>ReadmeSectionsView</b>. You can show any view in the
-workbench by choosing
-<b> Perspective-&gt;Show View-&gt;Other... </b> and selecting the view from the <b> Show View</b> list.</P>
+workbench by choosing <b>Window-&gt;Show View-&gt;Other... </b> and selecting the view from the <b> Show View</b> list.</P>
 <P >
 When we show the <b>ReadmeSectionsView</b>, a view with a list in it pops up.
 The list is empty unless we click on a file with extension <b>.readme</b>, in which case it populates the list with sections from the readme file.</P>
